# xrcf

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.TXT  README.md  developer-notes.md  style.md
.github/workflows/: Release.yml  check.yml  ci.yml  release.yml
arnoldc/: Cargo.toml  README.md
arnoldc/src/: arnold.rs  arnold_to_mlir.rs  example_to_mlir.rs  main.rs  transform.rs
compile-python/: Cargo.toml
compile-python/src/: main.rs
examples/: Cargo.toml  README.md
examples/python/: Cargo.toml
examples/python/src/: main.rs
pythonc/: Cargo.toml  README.md
pythonc/src/: main.rs  python.rs  python_to_mlir.rs  transform.rs
pythonc/src/python/: mod.rs
src/: arith.rs  attribute.rs  canonicalize.rs  compile.rs  lib.rs  main.rs  op.rs  opt.rs  pass.rs  translate.rs  typ.rs
src/convert/: func_to_llvm.rs  mlir_to_llvmir.rs  mod.rs
src/dialect/: mod.rs  op.rs
src/dialect/arith/: mod.rs  op.rs
src/dialect/func/: mod.rs  op.rs
src/dialect/llvmir/: attribute.rs  mod.rs  op.rs
src/ir/: attribute.rs  block.rs  mod.rs  module.rs  op.rs  operation.rs  region.rs  value.rs
src/parser/: mod.rs  parser.rs  scanner.rs  token.rs
src/rewrite/: func_to_llvm.rs  mod.rs
src/targ3t/: llvmir.rs
src/transform/: func_to_llvm.rs  mod.rs
tests/: add-one.ll  arith.rs  canonicalize.rs  hello-world.ll  llvmir.rs  tester.rs
tests/convert/: func_to_llvm.rs  mlir_to_llvmir.rs
toy/: Cargo.toml
toy/src/: lib.rs  op.rs  toy_to_mlir.rs
wea/: Cargo.toml  README.md
wea/src/: arnold.rs  arnold_to_mlir.rs  lib.rs  main.rs  op.rs  transform.rs  wea_to_mlir.rs
wea/tests/: tests.rs  wea_to_mlir.rs  wea_to_wat.rs
xr-bin/: Cargo.toml
xr-example/: Cargo.toml  README.md
xr-example/src/: example.rs  example_to_mlir.rs  main.rs  transform.rs
xrcf/: Cargo.toml  README.md
xrcf-bin/: Cargo.toml
xrcf-bin/src/: main.rs
xrcf/benches/: func_to_llvm.rs
xrcf/script/: release.sh
xrcf/src/: canonicalize.rs  compile.rs  lib.rs  llvm.rs  shared.rs  tester.rs  transform.rs  typ.rs
xrcf/src/convert/: cf_to_llvm.rs  experimental_to_mlir.rs  func_to_llvm.rs  mlir_to_clir.rs  mlir_to_llvmir.rs  mlir_to_wat.rs  mod.rs  scf_to_cf.rs  unstable_to_mlir.rs
xrcf/src/dialect/: mod.rs
xrcf/src/dialect/arith/: mod.rs  op.rs
xrcf/src/dialect/cf/: mod.rs  op.rs
xrcf/src/dialect/experimental/: mod.rs  op.rs
xrcf/src/dialect/func/: mod.rs  op.rs
xrcf/src/dialect/llvm/: attribute.rs  mod.rs  op.rs  typ.rs
xrcf/src/dialect/llvmir/: attribute.rs  mod.rs  op.rs
xrcf/src/dialect/scf/: mod.rs  op.rs
xrcf/src/dialect/unstable/: mod.rs  op.rs
xrcf/src/frontend/: mod.rs  parser.rs  scanner.rs  token.rs
xrcf/src/ir/: attribute.rs  block.rs  mod.rs  module.rs  op.rs  op_operand.rs  operation.rs  region.rs  typ.rs  value.rs
xrcf/src/parser/: mod.rs  parser.rs  scanner.rs  token.rs
xrcf/src/targ3t/: clif.rs  clir.rs  llvmir.rs  mod.rs  wat.rs
xrcf/src/targ3t/llvmir/: mod.rs  op.rs  typ.rs
xrcf/tests/: arith.rs  calculate.py  canonicalize.rs  constant.ll  hello-world.ll  tester.rs  tests.rs
xrcf/tests/convert/: cf_to_llvm.rs  experimental_to_mlir.rs  func_to_llvm.rs  mlir_to_clif.rs  mlir_to_clir.rs  mlir_to_llvmir.rs  mlir_to_wat.rs  mod.rs  scf_to_cf.rs  unstable_to_mlir.rs
