[package]
name = "xrcf"
description = "A compiler framework for fast language development"
keywords = ["compiler", "framework"]
categories = ["compilers"]
version = "0.1.0"
authors = ["xrcf contributors"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://git.huijzer.xyz/xrcf/xrcf"
homepage = "https://xrcf.org"

[dependencies]
anyhow = "1.0.86"

[dev-dependencies]
indoc = "2"
