[workspace]
resolver = "2"
members = [
    "arnoldc",
    "wea",
    "xrcf",
    "xrcf-bin",
]

[workspace.package]
version = "0.8.0"
authors = ["xrcf contributors"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/rikhuijzer/xrcf"
homepage = "https://xrcf.org"
