[package]
name = "pythonc"
version = "0.0.0"
description = "An example Python compiler that can compile a small subset of Python"
edition = "2021"
publish = false
authors = ["xrcf contributors"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://git.huijzer.xyz/xrcf/xrcf"
homepage = "https://xrcf.org"

[dependencies]
xrcf = { path = "../xrcf/" }
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
indoc = "2"
