[package]
name = "pythonc"
description = "An example Python compiler that can compile a small subset of Python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
xrcf = { path = "../xrcf/" }
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
indoc = "2"
