[package]
name = "wea"
description = "A compiler for the wea language"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "wea"
path = "src/lib.rs"

[[bin]]
name = "wea"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
xrcf = { path = "../xrcf/" }

[dev-dependencies]
indoc = "2"
xrcf = { path = "../xrcf/", features = ["test-utils"] }
