[package]
name = "xrcf-bin"
description = "CLI containing only the default XRCF passes"
keywords = ["compiler", "framework"]
categories = ["compilers"]
version = "0.1.0"
authors = ["xrcf contributors"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://git.huijzer.xyz/xrcf/xrcf"
homepage = "https://xrcf.org"
publish = false

[dependencies]
xrcf = { path = "../xrcf/" }
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
indoc = "2"
