[package]
name = "xrcf-bin"
description = "CLI containing only the default passes of xrcf"
keywords = ["compiler", "framework"]
categories = ["compilers"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
xrcf = { path = "../xrcf/" }
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
indoc = "2"
