[package]
name = "xrcf"
description = "eXtensible and Reusable Compiler Framework"
keywords = ["compiler", "framework"]
categories = ["compilers"]
version = "0.2.0"
authors = ["xrcf contributors"]
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://git.huijzer.xyz/xrcf/xrcf"
homepage = "https://xrcf.org"

[dependencies]
anyhow = "1.0.86"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
indoc = "2"
