[package]
name = "xrcf"
description = "eXtensible and Reusable Compiler Framework"
keywords = ["compiler", "framework"]
categories = ["compilers"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
wasmtime = { version = "28.0.0", features = ["cranelift"] }
cranelift = "0.115.0"
cranelift-module = "0.115.0"
cranelift-jit = "0.115.0"

[dev-dependencies]
indoc = "2"
xrcf = { path = ".", features = ["test-utils"] }

[features]
test-utils = []
